--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                     <img src="./Assets-aula2-curso3-html-e-css-main/assets/linkedin.png">Linkedin</a>
             </div>
         </section>
-        <img class="apresentacao__imagem" src="./Vector.svg" alt="Foto da Joana Santos codando">  
+        <img class="apresentacao__imagem" src="./imagem.jpg" alt="Foto da Joana Santos codando">  
     </main>
     <footer class="rodape">
         <p>Desenvolvido por Roberta Minami</p>
