--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             <div class="apresentacao__links">
                 <h2 class="apresentacao__links__subtitulo">Acesse minhas redes</h2>
                 <a class="apresentacao__links__navegacao" href="https://instagram.com/robertaakemi">
-                    <img src=".assets/instagram.png">Instagram</a>
+                    <img src="./instagram.png">Instagram</a>
                 <a class="apresentacao__links__navegacao" href="https://github.com/ro-ake">  
                     <img src="./Assets-aula2-curso3-html-e-css-main/assets/github.png">Github</a>
                 <a class="apresentacao__links__navegacao" href="https://linkedin.com/in/roberta-akemi-villas-minami-183b057b">
