--- a/index.html
+++ b/index.html
@@ -25,9 +25,9 @@
                 <a class="apresentacao__links__navegacao" href="https://instagram.com/robertaakemi">
                     <img src="./instagram.png">Instagram</a>
                 <a class="apresentacao__links__navegacao" href="https://github.com/ro-ake">  
-                    <img src="./Assets-aula2-curso3-html-e-css-main/assets/github.png">Github</a>
+                    <img src="./github.png">Github</a>
                 <a class="apresentacao__links__navegacao" href="https://linkedin.com/in/roberta-akemi-villas-minami-183b057b">
-                    <img src="./Assets-aula2-curso3-html-e-css-main/assets/linkedin.png">Linkedin</a>
+                    <img src="./linkedin.png">Linkedin</a>
             </div>
         </section>
         <img class="apresentacao__imagem" src="./imagem.jpg" alt="Foto da Joana Santos codando">  
