--- a/about.html
+++ b/about.html
@@ -27,11 +27,11 @@
                 <div class="apresentacao__links">
                     <h2 class="apresentacao__links__subtitulo">Acesse minhas redes</h2>
                     <a class="apresentacao__links__navegacao" href="https://instagram.com/robertaakemi">
-                        <img src="./Assets-aula2-curso3-html-e-css-main/assets/instagram.png">Instagram</a>
+                        <img src="./instagram.png">Instagram</a>
                     <a class="apresentacao__links__navegacao" href="https://github.com/ro-ake">  
-                        <img src="./Assets-aula2-curso3-html-e-css-main/assets/github.png">Github</a>
+                        <img src="./github.png">Github</a>
                     <a class="apresentacao__links__navegacao" href="https://linkedin.com/in/roberta-akemi-villas-minami-183b057b">
-                        <img src="./Assets-aula2-curso3-html-e-css-main/assets/linkedin.png">Linkedin</a>
+                        <img src="./linkedin.png">Linkedin</a>
                 </div>
             </section>
                 <img class="apresentacao__imagem"src="./horizonte.jpg" alt="foto horizonte">  
